--- a/css/outerLess/datePicker/index.less
+++ b/css/outerLess/datePicker/index.less
@@ -233,6 +233,7 @@
   }
 }
 .@{zr-prefix}-datepicker-wrap,.@{zr-prefix}-datepicker-wrap-week{
+  display: none;
   width:300px;
   position: absolute;
   z-index: 9999999;
