--- a/font/css/fontello.css
+++ b/font/css/fontello.css
@@ -10,12 +10,12 @@
 /*}*/
 @font-face {
     font-family: 'fontello';
-    src: url('http://zr.jd.com/static/font/font/fontello.eot?838125402');
-    src: url('http://zr.jd.com/static/font/font/fontello.eot?838125402#iefix') format('embedded-opentype'),
-    url('http://zr.jd.com/static/font/font/fontello.woff2?838125402') format('woff2'),
-    url('http://zr.jd.com/static/font/font/fontello.woff?838125402') format('woff'),
-    url('http://zr.jd.com/static/font/font/fontello.ttf?838125402') format('truetype'),
-    url('http://zr.jd.com/static/font/font/fontello.svg?838125402#fontello') format('svg');
+    src: url('//zr.jd.com/static/font/font/fontello.eot?838125402');
+    src: url('//zr.jd.com/static/font/font/fontello.eot?838125402#iefix') format('embedded-opentype'),
+    url('//zr.jd.com/static/font/font/fontello.woff2?838125402') format('woff2'),
+    url('//zr.jd.com/static/font/font/fontello.woff?838125402') format('woff'),
+    url('//zr.jd.com/static/font/font/fontello.ttf?838125402') format('truetype'),
+    url('//zr.jd.com/static/font/font/fontello.svg?838125402#fontello') format('svg');
     font-weight: normal;
     font-style: normal;
 }
