--- a/css/less/modules/checkbox.less
+++ b/css/less/modules/checkbox.less
@@ -1,142 +1,131 @@
-input[type='checkbox']{
-  appearance: checkbox;
-}
-.@{zr-prefix}-checkbox{
-  display: none;
+@radio-new-color: #4363f4;
+input[type='radio'][disabled],
+input[type='checkbox'][disabled],
+input[type='radio'].disabled,
+input[type='checkbox'].disabled {
+    cursor: not-allowed
 }
 
-.@{zr-prefix}-checkbox-module{
-  .@{zr-prefix}-checkbox-simulation{
-    cursor: pointer;
+
+.@{zr-prefix}-checkbox-wrapper {
+    position: relative;
     display: inline-block;
+    font-family: Helvetica Neue,Helvetica,PingFang SC,Hiragino Sans GB,Microsoft YaHei,SimSun,sans-serif;
     font-size: 14px;
-    //opacity: 0.65;
-    color: @grey-8;
-    &:hover{
-      .@{zr-prefix}-checkbox-normal{
-        border-color: #4363F4;
-      }
+    // font-variant: tabular-nums;
+    line-height: 1.5;  //1.5
+    color: rgba(0,0,0,0.65);
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    white-space: nowrap;
+    outline: none;
+    margin-right: 8px;
+    cursor: pointer;
+    &.@{zr-prefix}-checkbox-wrapper-checked {
+
     }
-    .@{zr-prefix}-checkbox-normal{
-      display: inline-block;
-      width: 14px;
-      height: 14px;
-      border: @border-width-base  @border-style-base @grey-5;
-      position: relative;
-      vertical-align:top;
-      border-radius: @border-radius-sm;
-      margin-right: 8px;
-      span{
-        position: absolute;
+    &:hover {
+        .@{zr-prefix}-checkbox-style {
+            .@{zr-prefix}-checkbox-inner {
+                border-color: @radio-new-color;
+            }
+        }
+    }
+    .@{zr-prefix}-checkbox-clone {
+        &.@{zr-prefix}-checkbox-checked {
+            .@{zr-prefix}-checkbox-inner {
+                border-color: @radio-new-color;
+                background-color: @radio-new-color;
+                &:after {
+                    transform: rotate(45deg) scale(1);
+                    opacity: 1;
+                    transition: all .3s cubic-bezier(.78, .14, .15, .86);
+                }
+            }
+        }
+        &.@{zr-prefix}-checkbox-disabled {
+            .@{zr-prefix}-checkbox-inner {
+                border-color: #d9d9d9 !important;
+                background-color: #f5f5f5;
+                cursor: not-allowed;
+                &:after {
+                    border-color: rgba(0,0,0,0.25);
+                }
+            }
+        }
+        &:hover {
+            .@{zr-prefix}-checkbox-inner {
+                border-color: @radio-new-color;
+            }
+        }
+        position: relative;
         display: inline-block;
-        top: 50%;
-        left: 50%;
-        margin-top: -3px;
-        margin-left: -3px;
-        width: 6px;
-        height: 4px;
-        border: @border-width-base  @border-style-base @grey-1;
-        border-bottom: transparent;
-        border-left: transparent;
-        transform:rotate(135deg);
-        visibility: hidden;
-      }
-      .@{zr-prefix}-checkbox-uncheck{
-        border: transparent;
-        height: 0;
-        width: 8px;
-        border-top:@border-width-base  @border-style-base @grey-1;
-        transform:rotate(0deg);
-        margin-top: 0;
-        margin-left: -4px;
-      }
+        font-family: Helvetica Neue,Helvetica,PingFang SC,Hiragino Sans GB,Microsoft YaHei,SimSun,sans-serif;
+        font-size: 14px;
+        // font-variant: tabular-nums;
+        line-height: 1;  //1.5
+        color: rgba(0,0,0,0.65);
+        box-sizing: border-box;
+        margin: 0;
+        padding: 0;
+        list-style: none;
+        white-space: nowrap;
+        outline: none;
+        vertical-align: sub; //sub
+        cursor: pointer;
+        // 代糖
+        .@{zr-prefix}-checkbox-inner {
+            position: relative;
+            box-sizing: border-box; //ant-no
+            top: 0;
+            left: 0;
+            display: block;
+            width: 16px;
+            height: 16px;
+            border-width: 1px;
+            border-style: solid;
+            border-radius: 2px;
+            border-color: #d9d9d9;
+            background-color: #fff;
+            transition: all .3s;
+            // border-collapse: separate
+
+            &:after {
+                position: absolute;
+                left: 4.57142857px;
+                top: 1.14285714px;
+                display: table;
+                width: 5.71428571px;
+                height: 9.14285714px;
+                border: 2px solid #fff;
+                display: table;
+                content: ' '; 
+                transform: rotate(45deg) scale(0);
+                transition: all .3s ease-in;
+                opacity: 0;
+                border-top: 0; 
+                border-left: 0; 
+            }
+        }
+        // 源生
+        .@{zr-prefix}-checkbox-original {
+            position: absolute;
+            opacity: 0;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            z-index: -1; //1
+            outline: none;
+            margin: 0;
+            cursor: pointer;
+        }
     }
-    .@{zr-prefix}-checkbox-text{
-      display: inline-block;
-      height: 14px;
-      line-height: 14px;
-      vertical-align: top;
+    .@{zr-prefix}-checkbox-label {
+        font-size: 14px;
+        padding-left: 8px;
+        padding-right: 8px;
     }
-  }
-}
-.@{zr-prefix}-checkbox-checked{
-  .@{zr-prefix}-checkbox-simulation{
-    .@{zr-prefix}-checkbox-normal{
-      border: none;
-      background: #4363F4;
-      span{
-        visibility: visible;
-      }
-    }
-  }
-}
-.@{zr-prefix}-checkbox-disable{
-  .@{zr-prefix}-checkbox-simulation{
-    cursor: not-allowed;
-    .@{zr-prefix}-checkbox-normal{
-      background: #FAFAFA !important;
-      border:1px solid  #D9D9D9 !important;
-      span{
-        border-color: #D9D9D9;
-      }
-    }
-    &:hover{
-      .zr-checkbox-normal{
-        border-color: @grey-5;
-      }
-    }
-    .@{zr-prefix}-checkbox-text{
-      opacity: 0.25;
-    }
-  }
-  input[type='checkbox']:checked+.@{zr-prefix}-checkbox-simulation{
-    .@{zr-prefix}-checkbox-normal{
-      border-color: #D9D9D9;
-      span{
-        display: block;
-      }
-    }
-  }
-}
-.@{zr-prefix}-checkbox-vertical{
-  .@{zr-prefix}-checkbox-module{
-    display: block;
-  }
-}
-.c-demo{
-  .@{zr-prefix}-checkbox-module{
-    margin-right: 40px;
-  }
-}
-.@{zr-prefix}-checkbox-all{
-  display: inline-block;
-  margin-bottom: 16px;
-}
-.@{zr-prefix}-checkbox-hide{
-  display: none;
-}
-
-
-
-
-
-
-
-
-
-
-.mixin(@name,@type) when (@name = @xs-name) and (@type = @screen-name-checkbox) {
-  //默认手机
-}
-.mixin(@name,@type) when (@name = @sm-name) and (@type = @screen-name-checkbox) {
-  //平板
-}
-.mixin(@name,@type) when (@name = @md-name) and (@type = @screen-name-checkbox) {
-  //桌面显示器
-}
-.mixin(@name,@type) when (@name = @lg-name) and (@type = @screen-name-checkbox) {
-  //大桌面显示器
-}
-.mixin(@name,@type) when (@name = @xl-name) and (@type = @screen-name-checkbox) {
-  //大屏慕数据展示
 }
