--- a/css/less/modules/select.less
+++ b/css/less/modules/select.less
@@ -127,15 +127,16 @@
   min-height: 32px;
   //padding: 6px 22px 2px 6px;
   vertical-align: middle;
+  padding-right: 30px;
   &:hover{
     border: @border-width-base @border-style-base @primary-color;
   }
   span{
     display: inline-block;
-    padding: 3px 4px;
+    padding: 2px 3px;
     background: #f5f5f5;
     border-radius: @border-radius-base;
-    margin: 4px;
+    margin: 3px;
     //margin-right: 4px;
 
     i{
