--- a/css/less/modules/radio.less
+++ b/css/less/modules/radio.less
@@ -8,7 +8,7 @@ input[type='checkbox'].disabled {
     cursor: not-allowed
 }
 
-.@{zr-prefix}-radio-wrapper {
+.zr-radio-wrapper {
     position: relative;
     display: inline-block;
     font-family: Helvetica Neue,Helvetica,PingFang SC,Hiragino Sans GB,Microsoft YaHei,SimSun,sans-serif;
@@ -24,19 +24,19 @@ input[type='checkbox'].disabled {
     outline: none;
     margin-right: 8px;
     cursor: pointer;
-    &.@{zr-prefix}-radio-wrapper-checked {
+    &.zr-radio-wrapper-checked {
 
     }
     &:hover {
-        .@{zr-prefix}-radio-clone {
-            .@{zr-prefix}-radio-inner {
+        .zr-radio-clone {
+            .zr-radio-inner {
                 border-color: @radio-new-color;
             }
         }
     }
-    .@{zr-prefix}-radio-clone {
-        &.@{zr-prefix}-radio-checked {
-            .@{zr-prefix}-radio-inner {
+    .zr-radio-clone {
+        &.zr-radio-checked {
+            .zr-radio-inner {
                 border-color: @radio-new-color;
                 &:after {
                     // transform: scale(1);
@@ -46,8 +46,8 @@ input[type='checkbox'].disabled {
                 }
             }
         }
-        &.@{zr-prefix}-radio-disabled {
-            .@{zr-prefix}-radio-inner {
+        &.zr-radio-disabled {
+            .zr-radio-inner {
                 border-color: #d9d9d9 !important;
                 background-color: #f5f5f5;
                 cursor: not-allowed;
@@ -57,7 +57,7 @@ input[type='checkbox'].disabled {
             }
         }
         &:hover {
-            .@{zr-prefix}-radio-inner {
+            .zr-radio-inner {
                 border-color: @radio-new-color;
             }
         }
@@ -77,15 +77,15 @@ input[type='checkbox'].disabled {
         vertical-align: sub; //sub
         cursor: pointer;
         // 代糖
-        .@{zr-prefix}-radio-inner {
+        .zr-radio-inner {
             position: relative;
             box-sizing: border-box; //ant-no
             top: 0;
             left: 0;
             display: block;      /////FIXME !!!!!
             // display: inline-block;  /////FIXME !!!!!
-            width: 16px;
-            height: 16px;
+            width: 14px;
+            height: 14px;
             border-width: 1px;
             border-style: solid;
             // border-radius: 100%;
@@ -97,8 +97,8 @@ input[type='checkbox'].disabled {
 
             &:after {
                 position: absolute;
-                width: 8px;
-                height: 8px;
+                width: 6px;
+                height: 6px;
                 left: 50%;
                 top: 50%;
                 display: table;
@@ -114,7 +114,7 @@ input[type='checkbox'].disabled {
             }
         }
         // 源生
-        .@{zr-prefix}-radio-original {
+        .zr-radio-original {
             position: absolute;
             opacity: 0;
             top: 0;
@@ -127,10 +127,11 @@ input[type='checkbox'].disabled {
             cursor: pointer;
         }
     }
-    .@{zr-prefix}-radio-label {
+    .zr-radio-label {
         font-size: 14px;
         padding-left: 8px;
         padding-right: 8px;
     }
 }
+
 
