--- a/css/less/modules/select.less
+++ b/css/less/modules/select.less
@@ -1,12 +1,55 @@
 .@{zr-prefix}-select{
   display: none;
 }
-.@{zr-prefix}-unselect{
+.@{zr-prefix}-simulation{
   position: relative;
   display: inline-block;
   color:@text-color;
   width: 100%;
-  .@{zr-prefix}-select-content{
+  .@{zr-prefix}-select-reception{
+    position: relative;
+    width: 100%;
+    border: @border-width-base @border-style-base @border-color-base;
+    border-radius: @border-radius-base;
+    min-height: 32px;
+    //padding: 6px 22px 2px 6px;
+    vertical-align: middle;
+    padding-right: 30px;
+    padding-left: 8px;
+    line-height: 30px;
+    &:hover{
+      border: @border-width-base @border-style-base @primary-color;
+    }
+    span{
+      display: inline-block;
+      padding: 2px 3px;
+      background: #f5f5f5;
+      border-radius: @border-radius-base;
+      margin: 3px;
+      //margin-right: 4px;
+      i{
+        opacity: .65;
+        margin-left: 4px;
+        &:hover{
+          opacity: .85;
+        }
+      }
+    }
+    >i{
+      opacity: .25;
+      display: inline-block;
+      position: absolute;
+      top: 50%;
+      margin-top: -9.5px;
+      right: 8px;
+      line-height: normal;
+    }
+  }
+  .@{zr-prefix}-select-multiple {
+    padding-left: 0;
+    line-height: normal;
+  }
+  .@{zr-prefix}-select-menu{
     width: 100%;
     font-family: @font-family;
     font-size: @font-size-base;
@@ -23,25 +66,13 @@
       height: @input-height-base;
       line-height: @input-height-base;
       padding: @dropdown-padding-base;
-      &:hover{
-        background: @item-hover-bg;
-      }
-    }
-    dd{
-      overflow: hidden;
-      white-space: nowrap;
-      text-overflow: ellipsis;
-    }
-    .@{zr-prefix}-select-tips{
-      color:@disabled-color;
-    }
-    .@{zr-prefix}-select-checkbox{
       cursor: pointer;
       //display: inline-block;
       font-size: 14px;
       opacity: 0.65;
       color: @grey-10;
       &:hover{
+        background: @item-hover-bg;
         .@{zr-prefix}-select-checkbox-normal{
           border-color: #4363F4;
         }
@@ -81,14 +112,19 @@
           margin-left: -4px;
         }
       }
-      .@{zr-prefix}-select-checkbox-text{
+      >span:last-child{
         display: inline-block;
         height: 14px;
         line-height: 14px;
         //vertical-align: top;
       }
     }
-    .@{zr-prefix}-select-checkbox.@{zr-prefix}-select-checkbox-checked{
+    dd{
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+    }
+    .@{zr-prefix}-select-checkbox-checked{
       .@{zr-prefix}-select-checkbox-normal{
         border: none;
         background: #4363F4;
@@ -98,15 +134,28 @@
       }
     }
   }
-  .@{zr-prefix}-select-content-lg{
-    top:@font-size-base + 30px;
+
+}
+.@{zr-prefix}-select-lg{
+  .zr-select-reception, .zr-select-menu{
+    line-height: 38px;
+    min-height: 38px;
+  }
+  .zr-select-menu{
+    top: 44px;
     dd{
       height: @input-height-lg;
       line-height: @input-height-lg;
     }
   }
-  .@{zr-prefix}-select-content-sm{
-    top:@font-size-base + 14px;
+}
+.@{zr-prefix}-select-sm{
+  .zr-select-reception, .zr-select-menu{
+    line-height: 22px;
+    min-height: 22px;
+  }
+  .zr-select-menu{
+    top: 28px;
     dd{
       height: @input-height-sm;
       line-height: @input-height-sm;
@@ -119,46 +168,6 @@
 .@{zr-prefix}-select-show{
   display: block;
 }
-.@{zr-prefix}-select-values{
-  position: relative;
-  width: 100%;
-  border: @border-width-base @border-style-base @border-color-base;
-  border-radius: @border-radius-base;
-  min-height: 32px;
-  //padding: 6px 22px 2px 6px;
-  vertical-align: middle;
-  padding-right: 30px;
-  &:hover{
-    border: @border-width-base @border-style-base @primary-color;
-  }
-  span{
-    display: inline-block;
-    padding: 2px 3px;
-    background: #f5f5f5;
-    border-radius: @border-radius-base;
-    margin: 3px;
-    //margin-right: 4px;
-
-    i{
-      opacity: .65;
-      margin-left: 4px;
-      &:hover{
-        opacity: .85;
-      }
-    }
-  }
-  >i{
-    opacity: .25;
-    display: inline-block;
-    position: absolute;
-    top: 50%;
-    margin-top: -9.5px;
-    right: 8px;
-  }
-}
-
-
-
 
 
 .mixin(@name,@type) when (@name = @xs-name) and (@type = @screen-name-select) {
