--- a/css/less/modules/select.less
+++ b/css/less/modules/select.less
@@ -134,8 +134,18 @@
       }
     }
   }
-
 }
+.@{zr-prefix}-select-disable{
+  background-color: #f5f5f5;
+  color: rgba(0,0,0,.25);
+  cursor: not-allowed;
+  .@{zr-prefix}-select-reception{
+    &:hover{
+      border: @border-width-base @border-style-base @border-color-base;
+    }
+  }
+}
+
 .@{zr-prefix}-select-lg{
   .zr-select-reception, .zr-select-menu{
     line-height: 38px;
@@ -168,7 +178,6 @@
 .@{zr-prefix}-select-show{
   display: block;
 }
-
 
 .mixin(@name,@type) when (@name = @xs-name) and (@type = @screen-name-select) {
   //默认手机
