--- a/css/less/modules/input.less
+++ b/css/less/modules/input.less
@@ -97,25 +97,26 @@
   bottom: 8px;
   color: @normal-color;
 }
+
 // todo 完成select组件后重写
 .@{zr-prefix}-input-wapper{
-  .@{zr-prefix}-unselect{
+  .@{zr-prefix}-simulation{
     width: 20%;
     margin: 0;
     display: inline-block;
-    .@{zr-prefix}-input{
+    vertical-align: middle;
+    .@{zr-prefix}-select-reception{
       border-bottom-right-radius: 0;
       border-top-right-radius: 0;
     }
   }
   >.@{zr-prefix}-input{
     display: inline-block;
-    width: 79%;
-    margin-left: -4px;
-    //border-left: none;
-    border-left: @border-width-base @border-style-base rgba(255, 255, 255, 0);
+    width: 80%;
+    border-left: none;
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
+    vertical-align: middle;
     &:focus{
       border-left: @border-width-base @border-style-base @primary-color;
     }
@@ -123,24 +124,22 @@
 }
 .@{zr-prefix}-input-btn{
   position: relative;
-  .@{zr-prefix}-unselect{
-    .@{zr-prefix}-select-title{
-      .@{zr-prefix}-input{
-        background: #fafafa;
-      }
-    }
+  .@{zr-prefix}-simulation{
+    background: #fafafa;
+    vertical-align: middle;
   }
   >.@{zr-prefix}-input{
     width: 70%;
     border-bottom-right-radius: 0;
     border-top-right-radius: 0;
+    vertical-align: middle;
   }
   >.@{zr-prefix}-input-addon{
     position: relative;
     right: 0;
-    top: 1px;
-    margin-left: -4px;
-    width: 9%;
+    top: 0px;
+    //margin-left: -4px;
+    width: 10%;
     background: #fafafa;
     border: @border-width-base @border-style-base @border-color-base;
     border-bottom-right-radius: 4px;
@@ -150,6 +149,7 @@
     opacity: 1;
     height: 32px;
     text-align: center;
+    vertical-align: middle;
     .@{zr-prefix}icon-search-empty{
       opacity: .45;
       &:hover{
@@ -159,16 +159,20 @@
   }
 }
 .@{zr-prefix}-input-wapper-left{
-  .@{zr-prefix}-unselect{
-    .@{zr-prefix}-input{
+  .@{zr-prefix}-simulation{
+    width: 20%;
+    margin: 0;
+    display: inline-block;
+    vertical-align: middle;
+    .@{zr-prefix}-select-reception{
       border-radius: 4px;
       border-bottom-left-radius: 0;
       border-top-left-radius: 0;
     }
   }
   >.@{zr-prefix}-input{
-    width: 79%;
-    margin-right: -4px;
+    width: 80%;
+    //margin-right: -4px;
     margin-left: 0;
     border-right: @border-width-base @border-style-base rgba(255, 255, 255, 0);
     border-left: @border-width-base @border-style-base @border-color-base;
